--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
 								</div>
 							</section>
 
+                            <section>
+                                <object data="pdf/resume.pdf" type=”application/pdf” width=”100%” height=”100%”> </object>
+                            </section>
                             
 						<!-- Meme -->
 							<section>
