--- a/index.html
+++ b/index.html
@@ -222,9 +222,11 @@
 							</section>
 
                             <section>
-                                <object data="pdf/resume.pdf" type=”application/pdf” width=”100%” height=”100%”> </object>
+                                <div class="container">
+                                    <object data="pdf/resume.pdf" type=”application/pdf” width=”100%” height=”100%”> </object>
+                                </div>
                             </section>
-                            
+
 						<!-- Meme -->
 							<section>
 								<div class="container">
