--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
                             <section>
                                 <div class="container">
-                                    <object data="pdf/resume.pdf" type=”application/pdf” width=”100%” height=”100%”> </object>
+                                    <iframe src=”/pdf/sample-3pp.pdf#page=2" width=”100%” height=”100%”></iframe>
                                 </div>
                             </section>
 
