--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 									<p>I am a final year graduate student undertaking Business Analytics at Columbia University, currently pursuing a career in the data science field. <br /> <br />
                                        Over the past 4 years, I have been actively delivering data-driven solutions in both professional and research settings. 
                                        Along the way, I have led my teams to won Best Insights Award at DataFest, a datathon sponsored by the American Statistical Association, and to achieve 3rd place in a Kaggle competition. This summer, I had a great time working alongside some brilliant minds at Activision Blizzard, looking into players' in-game behavior.<br /><br />
-                                       In the end, I aspire to be someone who uses data to create value.    
-                                    </p>
+                                       In the end, I aspire to be someone who uses data to create value. <br /> <br />
+                                       Check out my Resume <b><em><a href="pdf/resume.pdf">here</a></em></b>!
 								</div>
 							</section>
 
@@ -220,12 +220,6 @@
 									</div>
 								</div>
 							</section>
-
-                            <section>
-                                <div class="container">
-                                    <iframe src=”/pdf/sample-3pp.pdf#page=2" width=”100%” height=”100%”></iframe>
-                                </div>
-                            </section>
 
 						<!-- Meme -->
 							<section>
