--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                'Git', 
                'Apache Spark', 
                'Google Cloud']:
-                               
+
     proficient_knowledge = True
 
 else:
@@ -116,7 +116,7 @@ else:
                                                 </div>
                                         </article>
 										<article>
-                                                <a class="image"><img src="images/nlp.jpeg" alt="" /></a>
+                                                <a class="image"><img src="images/nlp.jpg" alt="" /></a>
                                                 <div class="inner">
                                                     <h4>NLP: Generate Knowledge Graphs to Predict Fertilizer Price Trends
                                                         <object type="image/svg+xml" data=https://img.shields.io/badge/OCP%20Group-PRIVATE-critical></object>
@@ -198,7 +198,7 @@ else:
 											</div>
                                         </article>
 										<article>
-                                                <a href="https://github.com/jhuo831alex/Research_NBA-Player-Analytics" class="image" target="_blank"><img src="images/NBA.png" alt="" /></a>
+                                                <a href="https://github.com/jhuo831alex/Research_NBA-Player-Analytics" class="image" target="_blank"><img src="images/NBA.jpg" alt="" /></a>
                                                 <div class="inner">
                                                     <h4><a href="https://github.com/jhuo831alex/Research_NBA-Player-Analytics" target="_blank">Sports Analytics: A Cost Efficient Approach to Building an NBA Team</a>
                                                         <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
