--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#one">Alex (Jiahao) Huo</a></h1>
+                    <!---<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span> -->
+                    <span class="image avatar"><a href="easter_egg.html" class="image" target="_blank"><img src="images/avatar.jpg" alt="" /></a></span>
+					<h1 id="logo"><a href="#intro">Alex (Jiahao) Huo</a></h1>
 					<p>Aspired Data Scientist</p>
 				</header>
 				<nav id="nav">
