Edited easter egg style

--- a/html/easter_egg.html
+++ b/html/easter_egg.html
@@ -4,7 +4,7 @@
         <title>Surprise!!!</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
     </head>
     <body style='margin-top:0;margin-left:25px;margin-right:0;'>
         <header class="major">
@@ -12,6 +12,6 @@
         </header>
         <p>Email <a href="mailto:jiahao.h@columbia.edu">jiahao.h@columbia.edu </a> to claim the prize &#128521; </p>
 
-        <img src="images/surprise.jpeg" alt="Surprise!" width=500>
+        <img src="../images/surprise.jpg" alt="Surprise!" width=700>
     </body>
 </html>
