Changes to easter egg

--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@ else:
 									<h3>Thank You for Reading My Portfolio! <br />
                                         A Meme for You that I Found Hilarious &#128129; 
                                     </h3> 
-                                    <img src="images/meme.jpg" alt="Surprise!" width=500>
+                                    <img src="images/meme.jpg" alt="Surprise!" width=500> <br/><br/>
+                                    <p><i>*I created and hid an Easter Egg somewhere on this page. The first person to find the egg will...</i></p> 
 								</div>
 							</section>
 
