--- a/html/easter_egg.html
+++ b/html/easter_egg.html
@@ -8,7 +8,7 @@
     </head>
     <body style='margin-top:0;margin-left:25px;margin-right:0;'>
         <header class="major">
-            <h2>Congratulations! You Found an Easter Egg!</h2>
+            <h2>Congratulations! You Found the Easter Egg!</h2>
         </header>
         <p>Email <a href="mailto:jiahao.h@columbia.edu">jiahao.h@columbia.edu </a> to claim the prize &#128521; </p>
 
