Changed repo link

--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@ else:
                                                 </div>
                                         </article>                                        
 										<article>
-                                                <a href="https://github.com/jhuo831alex/GameAnalytics_PUBG" class="image" target="_blank"><img src="images/pubg.jpg" alt="" /></a>
+                                                <a href="https://jhuo831alex.github.io/GameAnalytics_PUBG/" class="image" target="_blank"><img src="images/pubg.jpg" alt="" /></a>
                                                 <div class="inner">
-                                                    <h4><a href="https://github.com/jhuo831alex/GameAnalytics_PUBG" target="_blank">Game Analytics: Identify Cheaters in Game PlayerUnknown’s Battlegrounds (PUBG)</a>
+                                                    <h4><a href="https://jhuo831alex.github.io/GameAnalytics_PUBG/" target="_blank">Game Analytics: Identify Cheaters in Game PlayerUnknown’s Battlegrounds (PUBG)</a>
                                                         <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                     </h4>
                                                     <p>
