--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ else:
                                                     </h4>
                                                     <p>
                                                         Customized Exponential Accelerated Failure Time Model to examine players' survival prospect in game.<br />
-                                                        <b>Used as a reference for designers to balance game</b>
+                                                        <b><em>Used as a reference for designers to balance game</em></b>
                                                     </p>
                                                 </div>
                                         </article>
@@ -124,7 +124,7 @@ else:
                                                     </h4>
                                                     <p>
                                                         Parsed entities, and trained word embeddings using tools including DBpedia Spotlight annotation, Stanford CoreNLP, Word2vec, and etc. in parallel.<br />
-                                                        <b>Automated insights from mineral reports using NLP</b>
+                                                        <b><em>Automated insights from mineral reports using NLP</em></b>
                                                     </p>
                                                 </div>
                                         </article>
@@ -136,7 +136,7 @@ else:
                                                     </h4>
                                                     <p>
                                                         Applied Panel Regression, Breusch-Pagan test, the Hausman test, and the Granger Causality test to examine the relationship between non-renewable energy consumption and asthma prevalence. <br />
-                                                        <b>Completed analysis and 12-page-long paper in a time limit of 8 hours</b>
+                                                        <b><em>Completed analysis and 12-page-long paper in a time limit of 8 hours</em></b>
                                                     </p>
                                                 </div>
                                         </article>                                        
@@ -148,7 +148,7 @@ else:
                                                     </h4>
                                                     <p>
                                                         Implemented One-Class SVM and Isolation Forest to detect cheaters, and defined metrics to evaluate the results of unsupervised learning models. <br />
-                                                        <b>Identified cheaters with a true positive rate of 64.39%</b>
+                                                        <b><em>Identified cheaters with a true positive rate of 64.39%</em></b>
                                                     </p>
                                                 </div>
                                         </article> 
@@ -160,7 +160,7 @@ else:
                                                     </h4>
                                                     <p>
                                                         Overlaid AI logic rules to boost detection accuracy and reduce false alarm rate, and created a pipeline to deliver scheduled analytical reports. <br />
-                                                        <b>Increased detection accuracy by 7.6%, and reduced false alarm rate by 5.9%</b>
+                                                        <b><em>Increased detection accuracy by 7.6%, and reduced false alarm rate by 5.9%</em></b>
                                                     </p>
                                                 </div>
                                         </article>                                                                                         
@@ -171,7 +171,7 @@ else:
                                                     <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                 </h4>
 												<p>Delivered a XGBoost regression model to compute business values of job postings to optimize job posting rank and revenue. <br />
-                                                    <b>Won Best Insights Award</b>
+                                                    <b><em>Won Best Insights Award</em></b>
                                                 </p>
 											</div>
                                         </article>
@@ -183,7 +183,7 @@ else:
                                                     </h4>
                                                     <p>
                                                         Implemented binary logistic classification using XGBoost, and tuned hyperparameters with random search in parallel. <br />
-                                                        <b>Model Accuracy: 86.8%</b>
+                                                        <b><em>Model Accuracy: 86.8%</em></b>
                                                     </p>
                                                 </div>
                                         </article>                                           
@@ -194,7 +194,7 @@ else:
                                                     <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                 </h4>
                                                 <p>Implemented Gradient Boosting Decision Tree Algorithm, and tuned hyperparameters using random search in parallel. <br />
-                                                    <b>Ranked 3rd/92 teams </b>
+                                                    <b><em>Ranked 3rd/92 teams</em></b>
                                                 </p>
 											</div>
                                         </article>
@@ -206,7 +206,7 @@ else:
                                                     </h4>
                                                     <p>
                                                         Devised a ranking algorithm with self-defined KPIs and distance metrics to evaluate players’ performance and affordability, and accordingly built a "Fantasy Team". <br />
-                                                        <b>Wrote a 11-page-long research report</b>
+                                                        <b><em>Wrote a 11-page-long research report</em></b>
                                                     </p>
                                                 </div>
                                         </article>                                       
@@ -218,7 +218,7 @@ else:
                                                     </h4>
                                                     <p>
                                                         Used clustering method K-Means for user segmentation on <i>Expedia.com</i>, and identified behavioral differences in each segment to customize hotel recommendations. <br />
-                                                        <b>Presented to Expedia data scientists</b>
+                                                        <b><em>Presented to Expedia data scientists</em></b>
                                                     </p>
                                                 </div>
                                         </article>                                                                                                                                                                                                      
