Changed description indeed

--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@ else:
                                                 </div>
                                         </article>                                                                                         
 										<article>
-											<a href="https://github.com/jhuo831alex/DataFest2018_Indeed_BestInsights" class="image" target="_blank"><img src="images/indeed.jpg" alt="" /></a>
+											<a href="https://jhuo831alex.github.io/DataFest2018_Indeed_BestInsights/" class="image" target="_blank"><img src="images/indeed.jpg" alt="" /></a>
 											<div class="inner">
-                                                <h4><a href="https://github.com/jhuo831alex/DataFest2018_Indeed_BestInsights" target="_blank">DataFest 2018: Introduce Revenue Maximization Algorithm for <i>Indeed.com</i></a>
+                                                <h4><a href="https://jhuo831alex.github.io/DataFest2018_Indeed_BestInsights/" target="_blank">DataFest 2018: Introduce Revenue Maximization Algorithm for <i>Indeed.com</i></a>
                                                     <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                 </h4>
-												<p>Delivered a XGBoost regression model to compute business values of job postings to optimize job posting rank and revenue. <br />
+												<p>Delivered a XGBoost regression model to compute business values of job postings to optimize job posting order and to maximize revenue. <br />
                                                     <b><em>Won Best Insights Award</em></b>
                                                 </p>
 											</div>
