--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					</ul>
 				</footer>
 			</section>
-
+            
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -53,7 +53,8 @@
                                        Over the past 4 years, I have been actively delivering data-driven solutions in both professional and research settings. 
                                        Along the way, I have led my teams to won Best Insights Award at DataFest, a datathon sponsored by the American Statistical Association, and to achieve 3rd place in a Kaggle competition. This summer, I had a great time working alongside some brilliant minds at Activision Blizzard, looking into players' in-game behavior.<br /><br />
                                        In the end, I aspire to be someone who uses data to create value. <br /> <br />
-                                       Check out my Resume <b><em><a href="pdf/resume.pdf">here</a></em></b>!
+                                       Check out my Resume <b><em><a href="files/resume.pdf">here</a></em></b>!
+                                    </p>
 								</div>
 							</section>
 
@@ -141,9 +142,9 @@ else:
                                                 </div>
                                         </article>                                        
 										<article>
-                                                <a href="https://jhuo831alex.github.io/GameAnalytics_PUBG/" class="image" target="_blank"><img src="images/pubg.jpg" alt="" /></a>
+                                                <a href="html/pubg.html" class="image" target="_blank"><img src="images/pubg.jpg" alt="" /></a>
                                                 <div class="inner">
-                                                    <h4><a href="https://jhuo831alex.github.io/GameAnalytics_PUBG/" target="_blank">Game Analytics: Identify Cheaters in Game PlayerUnknown’s Battlegrounds (PUBG)</a>
+                                                    <h4><a href="html/pubg.html" target="_blank">Game Analytics: Identify Cheaters in Game PlayerUnknown’s Battlegrounds (PUBG)</a>
                                                         <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                     </h4>
                                                     <p>
