Changed button link

--- a/html/pubg.html
+++ b/html/pubg.html
@@ -36,6 +36,7 @@
                 <div id="main">
 
                     <section id="intro">
+
                         <div class="container">
                             <header class="major">
                                 <h2>Identify Cheaters in game PlayerUnknown’s Battlegrounds (PUBG)</h2>
@@ -44,9 +45,10 @@
                                 <em>
                                     Implemented Anomaly Detection algorithms, including One-Class SVM and Isolation Forest, to detect cheaters, and defined metrics to evaluate the results of unsupervised learning models.
                                 </em> <br /> <br />
-                                <a href="https://github.com/jhuo831alex/GameAnalytics_PUBG" class="button primary">View on GitHub</a>
+                                <a href="https://github.com/jhuo831alex/GameAnalytics_PUBG" class="button primary" target="_blank">View on GitHub</a>
                             </p>
                         </div>
+
                     </section>
 
                     <section>
