Added back button

--- a/html/pubg.html
+++ b/html/pubg.html
@@ -85,6 +85,9 @@
                                 Presentation Markdown <a href="../files/pubg/Presentation_Markdown.html"><b><em>here</em></b></a>
                                 and Project Report <a href="../files/pubg/Project_Report.pdf"><b><em>here</em></b></a>.
                             </p>
+                            <p>
+                                <a href="https://jhuo831alex.github.io/#projects" class="button alt">Back</a>
+                            </p>
                         </div>
                     </section>
 
