--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@ else:
                                                 </div>
                                         </article>
 										<article>
-                                                <a href="https://jhuo831alex.github.io/TheDataOpen_Renewable-Energy/" class="image" target="_blank"><img src="images/energy.jpg" alt="" /></a>
+                                                <a href="html/energy.html" class="image" target="_blank"><img src="images/energy.jpg" alt="" /></a>
                                                 <div class="inner">
-                                                    <h4><a href="https://jhuo831alex.github.io/TheDataOpen_Renewable-Energy/" target="_blank">The Data Open: Improving Community Health with Renewable Energy Source</a>
+                                                    <h4><a href="html/energy.html" target="_blank">The Data Open: Improving Community Health with Renewable Energy Source</a>
                                                         <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                     </h4>
                                                     <p>
