--- a/html/pubg.html
+++ b/html/pubg.html
@@ -12,15 +12,15 @@
 			<section id="header">
 				<header>
                     <span class="image avatar"><a href="../html/easter_egg.html" class="image" target="_blank"><img src="../images/avatar.jpg" alt="" /></a></span>
-					<h1 id="logo"><a href="https://jhuo831alex.github.io/">Alex (Jiahao) Huo</a></h1>
+					<h1 id="logo"><a href="../index.html">Alex (Jiahao) Huo</a></h1>
 					<p>Aspired Data Scientist</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="https://jhuo831alex.github.io/" class="active">About Me</a></li>
-                        <li><a href="https://jhuo831alex.github.io/#topics">Topics I Have Covered</a></li>
-                        <li><a href="https://jhuo831alex.github.io/#skillset">Skills I Have Accquired</a></li>
-						<li><a href="https://jhuo831alex.github.io/#projects">Projects I Have Done</a></li>
+						<li><a href="../index.html" class="active">About Me</a></li>
+                        <li><a href="../index.html#topics">Topics I Have Covered</a></li>
+                        <li><a href="../index.html#skillset">Skills I Have Accquired</a></li>
+						<li><a href="../index.html#projects">Projects I Have Done</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -86,7 +86,7 @@
                                 and the Project Report <a href="../files/pubg/Project_Report.pdf"><b><em>here</em></b></a>.
                             </p>
                             <p>
-                                <a href="https://jhuo831alex.github.io/#projects" class="button alt">Back</a>
+                                <a href="../index.html#projects" class="button alt">Back</a>
                             </p>
                         </div>
                     </section>
