Added indeed pages

--- a/html/energy.html
+++ b/html/energy.html
@@ -53,11 +53,13 @@
 
                     <section>
                         <div class="container">
+
                             <h3>About the Project</h3>
                             <p>
                                 The main goal of this project was to explore the relationship between the consumption of non-renewable energy and prevalence of respiratory diseases, especially asthma. 
                                 The ultimate aim was to prove the causality: The more non-renewable energy consumed, the higher prevelance of asthma.
                             </p>
+
                             <h3>Methodology</h3>
                             <ul>
                                 <li>The following relationships were carefully examined:</li>
@@ -73,7 +75,16 @@
                             
                             <h3>Further Details</h3>
                             <p>For more information, check out 
-                                the Research Paper <a href="../files/energy/Research_Paper.pdf"><b><em>here</em></b></a>.
+                                the Research Paper <a href="../files/energy/Research_Paper.pdf" target="_blank"><b><em>here</em></b></a>.
+                            </p>
+
+                            <h3>About The Data Open</h3>
+                            <p>
+                                The Data Open is a datathon competition taking place throughout the year at a series of top universities. 
+                                At each event, participants work in teams to work through a large and complex dataset and then present their findings to a panel of judges.
+                                <br /> <br />
+                                For more information, check out the official website 
+                                <b><em><a href="https://www.citadel.com/careers/the-data-open/" target="_blank">here</a></em></b> 
                             </p>
                             <p>
                                 <a href="../index.html#projects" class="button alt">Back</a>
