--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@ else:
                                                 </div>
                                         </article>
 										<article>
-                                                <a href="html/energy.html" class="image" target="_blank"><img src="images/energy.jpg" alt="" /></a>
+                                                <a href="html/energy.html" class="image"><img src="images/energy.jpg" alt="" /></a>
                                                 <div class="inner">
-                                                    <h4><a href="html/energy.html" target="_blank">The Data Open: Improving Community Health with Renewable Energy Source</a>
+                                                    <h4><a href="html/energy.html">The Data Open: Improving Community Health with Renewable Energy Source</a>
                                                         <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                     </h4>
                                                     <p>
@@ -142,9 +142,9 @@ else:
                                                 </div>
                                         </article>                                        
 										<article>
-                                                <a href="html/pubg.html" class="image" target="_blank"><img src="images/pubg.jpg" alt="" /></a>
+                                                <a href="html/pubg.html" class="image"><img src="images/pubg.jpg" alt="" /></a>
                                                 <div class="inner">
-                                                    <h4><a href="html/pubg.html" target="_blank">Game Analytics: Identify Cheaters in Game PlayerUnknown’s Battlegrounds (PUBG)</a>
+                                                    <h4><a href="html/pubg.html">Game Analytics: Identify Cheaters in Game PlayerUnknown’s Battlegrounds (PUBG)</a>
                                                         <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                     </h4>
                                                     <p>
@@ -166,9 +166,9 @@ else:
                                                 </div>
                                         </article>                                                                                         
 										<article>
-											<a href="https://jhuo831alex.github.io/DataFest2018_Indeed_BestInsights/" class="image" target="_blank"><img src="images/indeed.jpg" alt="" /></a>
+											<a href="html/indeed.html" class="image"><img src="images/indeed.jpg" alt="" /></a>
 											<div class="inner">
-                                                <h4><a href="https://jhuo831alex.github.io/DataFest2018_Indeed_BestInsights/" target="_blank">DataFest 2018: Introduce Revenue Maximization Algorithm for <i>Indeed.com</i></a>
+                                                <h4><a href="html/indeed.html">DataFest 2018: Introduce Revenue Maximization Algorithm for <i>Indeed.com</i></a>
                                                     <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                 </h4>
 												<p>Delivered a XGBoost regression model to compute business values of job postings to optimize job posting order and to maximize revenue. <br />
