--- a/html/easter_egg.html
+++ b/html/easter_egg.html
@@ -1,17 +1,75 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Surprise!!!</title>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<title>Surprise!!!</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
-    </head>
-    <body style='margin-top:0;margin-left:25px;margin-right:0;'>
-        <header class="major">
-            <h2>Congratulations! You Found the Easter Egg!</h2>
-        </header>
-        <p>Email <a href="mailto:jiahao.h@columbia.edu">jiahao.h@columbia.edu </a> to claim the prize &#128521; </p>
+	</head>
+	<body class="is-preload">
 
-        <img src="../images/surprise.jpg" alt="Surprise!" width=700>
+		<!-- Header -->
+			<section id="header">
+				<header>
+                    <span class="image avatar"><a href="../html/easter_egg.html" class="image" target="_blank"><img src="../images/avatar.jpg" alt="" /></a></span>
+					<h1 id="logo"><a href="../index.html">Alex (Jiahao) Huo</a></h1>
+					<p>Aspired Data Scientist</p>
+				</header>
+				<nav id="nav">
+					<ul>
+						<li><a href="../index.html" class="active">About Me</a></li>
+                        <li><a href="../index.html#topics">Topics I Have Covered</a></li>
+                        <li><a href="../index.html#skillset">Skills I Have Accquired</a></li>
+						<li><a href="../index.html#projects">Projects I Have Done</a></li>
+					</ul>
+				</nav>
+				<footer>
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/jiahaohuo/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/jhuo831alex" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+						<li><a href="mailto:jiahao.h@columbia.edu" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+					</ul>
+				</footer>
+            </section>
+
+            <div id="wrapper">
+                <div id="main">
+
+                    <section id="intro">
+
+                        <div class="container">
+                            <header class="major">
+                                <h2>Congratulations! You Found the Easter Egg!</h2>
+                            </header>
+                            <p>
+                                Email <a href="mailto:jiahao.h@columbia.edu">jiahao.h@columbia.edu </a> to claim the prize &#128521; 
+                            </p>
+                            <img src="../images/surprise.jpg" alt="Surprise!" width=700> <br /><br />
+                            <p>
+                                <a href="../index.html" class="button alt">Back</a>
+                            </p>
+                        </div>
+                    </section>
+             
+                </div>
+
+                <section id="footer">
+                    <div class="container">
+                        <ul class="copyright">
+                            <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                        </ul>
+                    </div>
+                </section>
+
+            </div>
+
+            <script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+            <script src="../assets/js/main.js"></script>
+            
     </body>
 </html>
