--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@ else:
 											</div>
                                         </article>
 										<article>
-                                                <a href="https://github.com/jhuo831alex/DataFest2015_Edmunds" class="image" target="_blank"><img src="images/edmunds.jpg" alt="" /></a>
+                                                <a href="html/edmunds.html" class="image"><img src="images/edmunds.jpg" alt="" /></a>
                                                 <div class="inner">
-                                                    <h4><a href="https://github.com/jhuo831alex/DataFest2015_Edmunds" target="_blank">DataFest 2015: Classify Buyers and Non-buyers on <i>Edmunds.com</i></a>
+                                                    <h4><a href="html/edmunds.html">DataFest 2015: Classify Buyers and Non-buyers on <i>Edmunds.com</i></a>
                                                         <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                     </h4>
                                                     <p>
@@ -189,9 +189,9 @@ else:
                                                 </div>
                                         </article>                                           
 										<article>
-											<a href="https://github.com/jhuo831alex/KaggleCompetition_LAPD-Ranked3" class="image" target="_blank"><img src="images/kaggle.jpg" alt="" /></a>
+											<a href="html/lapd.html" class="image"><img src="images/kaggle.jpg" alt="" /></a>
 											<div class="inner">
-                                                <h4><a href="https://github.com/jhuo831alex/KaggleCompetition_LAPD-Ranked3" target="_blank">Kaggle Competition: Predict Average Response Time of the Los Angeles Fire Department</a>
+                                                <h4><a href="html/lapd.html">Kaggle Competition: Predict Average Response Time of the Los Angeles Fire Department</a>
                                                     <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                 </h4>
                                                 <p>Implemented Gradient Boosting Decision Tree Algorithm, and tuned hyperparameters using random search in parallel. <br />
