--- a/html/easter_egg.html
+++ b/html/easter_egg.html
@@ -42,9 +42,9 @@
                                 <h2>Congratulations! You Found the Easter Egg!</h2>
                             </header>
                             <p>
-                                Email <a href="mailto:jiahao.h@columbia.edu">jiahao.h@columbia.edu </a> to claim the prize &#128521; 
+                                Email <a href="mailto:jiahao.h@columbia.edu"><em>jiahao.h@columbia.edu</em></a> to claim the prize &#128521; 
                             </p>
-                            <img src="../images/surprise.jpg" alt="Surprise!" width=700> <br /><br />
+                            <img src="../images/surprise.jpg" alt="Surprise!" width=400> <br /><br />
                             <p>
                                 <a href="../index.html" class="button alt">Back</a>
                             </p>
